// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`patterns Renders \`patterns\` corporate tab with permissions 1`] = `
<div>
  <c-page-header-stub>
    Patterns
  </c-page-header-stub>
  <div
    class="layout wrap"
  >
    <div
      class="flex xs12"
    >
      <div
        class="ma-2 v-card v-sheet theme--light"
      >
        <div
          class="v-tabs v-tabs--fixed-tabs theme--light"
        >
          <div
            class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text"
            role="tablist"
          >
            <div
              class="v-slide-group__prev v-slide-group__prev--disabled"
            >
              <transition-stub
                name="fade-transition"
              />
            </div>
            <div
              class="v-slide-group__wrapper"
            >
              <div
                class="v-slide-group__content v-tabs-bar__content"
              >
                <div
                  class="v-tabs-slider-wrapper"
                  style="transition: none;"
                >
                  <div
                    class="v-tabs-slider primary"
                  />
                </div>
                <a
                  aria-selected="true"
                  class="v-tab v-tab--active"
                  href="#patterns"
                  role="tab"
                  tabindex="0"
                >
            My patterns
                </a>
                <a
                  aria-selected="false"
                  class="v-tab"
                  href="#corporatePatterns"
                  role="tab"
                  tabindex="0"
                >
            Shared patterns
                </a>
              </div>
            </div>
            <div
              class="v-slide-group__next v-slide-group__next--disabled"
            >
              <transition-stub
                name="fade-transition"
              />
            </div>
          </div>
          <div
            class="v-window v-item-group theme--light v-tabs-items"
          >
            <div
              class="v-window__container"
            >
              <transition-stub
                name=""
              >
                <div
                  class="v-window-item v-window-item--active"
                  id="patterns"
                >
                  <patterns-stub />
                </div>
              </transition-stub>
              <transition-stub
                name=""
              >
                <!---->
              </transition-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <c-fab-expand-btn-stub
    has-access="true"
  >
    <c-action-fab-btn-stub
      color="grey darken-1"
      icon="pause"
      tooltip="Create shared pbehavior filter"
      top=""
    />
    <c-action-fab-btn-stub
      color="blue"
      icon="perm_identity"
      tooltip="Create shared entity filter"
      top=""
    />
    <c-action-fab-btn-stub
      color="error"
      icon="notification_important"
      tooltip="Create shared alarm filter"
      top=""
    />
    <c-action-fab-btn-stub
      color="secondary lighten-2"
      icon="view_module"
      tooltip="Create shared service weather filter"
      top=""
    />
  </c-fab-expand-btn-stub>
</div>
`;

exports[`patterns Renders \`patterns\` with permissions 1`] = `
<div>
  <c-page-header-stub>
    Patterns
  </c-page-header-stub>
  <div
    class="layout wrap"
  >
    <div
      class="flex xs12"
    >
      <div
        class="ma-2 v-card v-sheet theme--light"
      >
        <div
          class="v-tabs v-tabs--fixed-tabs theme--light"
        >
          <div
            class="v-item-group theme--light v-slide-group v-tabs-bar v-tabs-bar--is-mobile primary--text"
            role="tablist"
          >
            <div
              class="v-slide-group__prev v-slide-group__prev--disabled"
            >
              <transition-stub
                name="fade-transition"
              />
            </div>
            <div
              class="v-slide-group__wrapper"
            >
              <div
                class="v-slide-group__content v-tabs-bar__content"
              >
                <div
                  class="v-tabs-slider-wrapper"
                  style="transition: none;"
                >
                  <div
                    class="v-tabs-slider primary"
                  />
                </div>
                <a
                  aria-selected="true"
                  class="v-tab v-tab--active"
                  href="#patterns"
                  role="tab"
                  tabindex="0"
                >
            My patterns
                </a>
                <a
                  aria-selected="false"
                  class="v-tab"
                  href="#corporatePatterns"
                  role="tab"
                  tabindex="0"
                >
            Shared patterns
                </a>
              </div>
            </div>
            <div
              class="v-slide-group__next v-slide-group__next--disabled"
            >
              <transition-stub
                name="fade-transition"
              />
            </div>
          </div>
          <div
            class="v-window v-item-group theme--light v-tabs-items"
          >
            <div
              class="v-window__container"
            >
              <transition-stub
                name=""
              >
                <div
                  class="v-window-item v-window-item--active"
                  id="patterns"
                >
                  <patterns-stub />
                </div>
              </transition-stub>
              <transition-stub
                name=""
              >
                <!---->
              </transition-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <c-fab-expand-btn-stub
    has-access="true"
  >
    <c-action-fab-btn-stub
      color="grey darken-1"
      icon="pause"
      tooltip="Create pbehavior filter"
      top=""
    />
    <c-action-fab-btn-stub
      color="blue"
      icon="perm_identity"
      tooltip="Create entity filter"
      top=""
    />
    <c-action-fab-btn-stub
      color="error"
      icon="notification_important"
      tooltip="Create alarm filter"
      top=""
    />
    <c-action-fab-btn-stub
      color="secondary lighten-2"
      icon="view_module"
      tooltip="Create service weather filter"
      top=""
    />
  </c-fab-expand-btn-stub>
</div>
`;

exports[`patterns Renders \`patterns\` without permissions 1`] = `
<div>
  <c-page-header-stub>
    Patterns
  </c-page-header-stub>
  <div
    class="layout wrap"
  >
    <div
      class="flex xs12"
    >
      <div
        class="ma-2 v-card v-sheet theme--light"
      >
        <patterns-stub />
      </div>
    </div>
  </div>
  <c-fab-expand-btn-stub
    has-access="true"
  >
    <c-action-fab-btn-stub
      color="grey darken-1"
      icon="pause"
      tooltip="Create pbehavior filter"
      top=""
    />
    <c-action-fab-btn-stub
      color="blue"
      icon="perm_identity"
      tooltip="Create entity filter"
      top=""
    />
    <c-action-fab-btn-stub
      color="error"
      icon="notification_important"
      tooltip="Create alarm filter"
      top=""
    />
    <c-action-fab-btn-stub
      color="secondary lighten-2"
      icon="view_module"
      tooltip="Create service weather filter"
      top=""
    />
  </c-fab-expand-btn-stub>
</div>
`;
